Update GoogleCloudStorageService.java